--- a/archives/toutiao-search/2023-11-07.md
+++ b/archives/toutiao-search/2023-11-07.md
@@ -1,52 +1,74 @@
 # 2023-11-07
 
-共 336 条
+共 356 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Tue Nov 07 2023 20:08:39 GMT+0800 (China Standard Time) -->
-1. [董明珠首次回应孟羽童离职](https://so.toutiao.com/search?keyword=董明珠首次回应孟羽童离职)
-1. [90后夫妻存100万靠利息生活](https://so.toutiao.com/search?keyword=90后夫妻存100万靠利息生活)
-1. [“乌镇峰会” 十年回首再出发](https://so.toutiao.com/search?keyword=“乌镇峰会”+十年回首再出发)
-1. [哈工大回应学生上课像登机](https://so.toutiao.com/search?keyword=哈工大回应学生上课像登机)
+<!-- 最后更新时间 Tue Nov 07 2023 21:06:57 GMT+0800 (China Standard Time) -->
 1. [官方通报“医院院长贩卖出生证”](https://so.toutiao.com/search?keyword=官方通报“医院院长贩卖出生证”)
-1. [美国和以色列讨论“战术性停火”](https://so.toutiao.com/search?keyword=美国和以色列讨论“战术性停火”)
-1. [朱丹回应叫错人名结束职业生涯](https://so.toutiao.com/search?keyword=朱丹回应叫错人名结束职业生涯)
-1. [女生肚子大被搓澡阿姨救了一命](https://so.toutiao.com/search?keyword=女生肚子大被搓澡阿姨救了一命)
-1. [中山二院辟谣乳腺外科团队学生患癌](https://so.toutiao.com/search?keyword=中山二院辟谣乳腺外科团队学生患癌)
-1. [南方女生穿泳装在雪地里“游泳”](https://so.toutiao.com/search?keyword=南方女生穿泳装在雪地里“游泳”)
-1. [黑龙江体育馆坍塌致3人遇难](https://so.toutiao.com/search?keyword=黑龙江体育馆坍塌致3人遇难)
-1. [刘强东老家水龙头忘关 网友联系京东](https://so.toutiao.com/search?keyword=刘强东老家水龙头忘关+网友联系京东)
-1. [今年冬天会是最冷冬天吗](https://so.toutiao.com/search?keyword=今年冬天会是最冷冬天吗)
-1. [女子转卖父母生前处方药被判贩毒罪](https://so.toutiao.com/search?keyword=女子转卖父母生前处方药被判贩毒罪)
-1. [福建男子在宾馆疑将妻子打死](https://so.toutiao.com/search?keyword=福建男子在宾馆疑将妻子打死)
-1. [专家：全国房价泡沫终于挤完了](https://so.toutiao.com/search?keyword=专家：全国房价泡沫终于挤完了)
+1. [董明珠首次回应孟羽童离职](https://so.toutiao.com/search?keyword=董明珠首次回应孟羽童离职)
+1. [6年“全勤打卡”的进博老友](https://so.toutiao.com/search?keyword=6年“全勤打卡”的进博老友)
+1. [中纪委同日处分两只“老虎”](https://so.toutiao.com/search?keyword=中纪委同日处分两只“老虎”)
 1. [男子每天三顿腌制品确诊胃癌晚期](https://so.toutiao.com/search?keyword=男子每天三顿腌制品确诊胃癌晚期)
+1. [90后夫妻存100万靠利息生活](https://so.toutiao.com/search?keyword=90后夫妻存100万靠利息生活)
+1. [女生肚子大被搓澡阿姨救了一命](https://so.toutiao.com/search?keyword=女生肚子大被搓澡阿姨救了一命)
+1. [南方女生穿泳装在雪地里“游泳”](https://so.toutiao.com/search?keyword=南方女生穿泳装在雪地里“游泳”)
+1. [深圳供电局只录取海归硕士？假的](https://so.toutiao.com/search?keyword=深圳供电局只录取海归硕士？假的)
+1. [朱丹回应叫错人名结束职业生涯](https://so.toutiao.com/search?keyword=朱丹回应叫错人名结束职业生涯)
+1. [女子称与植物人丈夫生试管婴儿二胎](https://so.toutiao.com/search?keyword=女子称与植物人丈夫生试管婴儿二胎)
+1. [媒体：让课间十分钟热闹起来](https://so.toutiao.com/search?keyword=媒体：让课间十分钟热闹起来)
+1. [黑龙江体育馆坍塌致3人遇难](https://so.toutiao.com/search?keyword=黑龙江体育馆坍塌致3人遇难)
+1. [导师连说3遍“学生全患癌”是造谣](https://so.toutiao.com/search?keyword=导师连说3遍“学生全患癌”是造谣)
 1. [高铁遇暴雪停运7h全车被困无人埋怨](https://so.toutiao.com/search?keyword=高铁遇暴雪停运7h全车被困无人埋怨)
-1. [出生证明事件暗访者：证据已交警方](https://so.toutiao.com/search?keyword=出生证明事件暗访者：证据已交警方)
-1. [刘诗诗宛如优雅黑天鹅](https://so.toutiao.com/search?keyword=刘诗诗宛如优雅黑天鹅)
-1. [古特雷斯谈巴以冲突：一场人性危机](https://so.toutiao.com/search?keyword=古特雷斯谈巴以冲突：一场人性危机)
+1. [刘强东老家水龙头忘关 网友联系京东](https://so.toutiao.com/search?keyword=刘强东老家水龙头忘关+网友联系京东)
+1. [哈工大回应学生上课像登机](https://so.toutiao.com/search?keyword=哈工大回应学生上课像登机)
+1. [今年冬天会是最冷冬天吗](https://so.toutiao.com/search?keyword=今年冬天会是最冷冬天吗)
+1. [布林肯试图拥抱土耳其外长遭拒绝](https://so.toutiao.com/search?keyword=布林肯试图拥抱土耳其外长遭拒绝)
+1. [女子转卖父母生前处方药被判贩毒罪](https://so.toutiao.com/search?keyword=女子转卖父母生前处方药被判贩毒罪)
 1. [卖出生证女院长疑有非法引产前科](https://so.toutiao.com/search?keyword=卖出生证女院长疑有非法引产前科)
-1. [巴勒斯坦总理开会发言一度哽咽失声](https://so.toutiao.com/search?keyword=巴勒斯坦总理开会发言一度哽咽失声)
-1. [以色列订购的武器让美国官员担心](https://so.toutiao.com/search?keyword=以色列订购的武器让美国官员担心)
-1. [人民网评院长被指倒卖出生证明](https://so.toutiao.com/search?keyword=人民网评院长被指倒卖出生证明)
 1. [一火箭弹落入以色列居民区画面曝光](https://so.toutiao.com/search?keyword=一火箭弹落入以色列居民区画面曝光)
-1. [美国动用70架运输机向以色列送军火](https://so.toutiao.com/search?keyword=美国动用70架运输机向以色列送军火)
+1. [巴勒斯坦总理开会发言一度哽咽失声](https://so.toutiao.com/search?keyword=巴勒斯坦总理开会发言一度哽咽失声)
+1. [人民网评院长被指倒卖出生证明](https://so.toutiao.com/search?keyword=人民网评院长被指倒卖出生证明)
+1. [以色列订购的武器让美国官员担心](https://so.toutiao.com/search?keyword=以色列订购的武器让美国官员担心)
+1. [男扮女装照被曝光 美国一市长自杀](https://so.toutiao.com/search?keyword=男扮女装照被曝光+美国一市长自杀)
 1. [媒体：卖出生证院长曾获刑 咋上任的](https://so.toutiao.com/search?keyword=媒体：卖出生证院长曾获刑+咋上任的)
+1. [美国动用70架运输机向以色列送军火](https://so.toutiao.com/search?keyword=美国动用70架运输机向以色列送军火)
+1. [专家：全国房价泡沫终于挤完了](https://so.toutiao.com/search?keyword=专家：全国房价泡沫终于挤完了)
+1. [检察院抗诉犯人遭殴打后身亡案](https://so.toutiao.com/search?keyword=检察院抗诉犯人遭殴打后身亡案)
+1. [媒体评医院院长贩卖婴儿和出生证明](https://so.toutiao.com/search?keyword=媒体评医院院长贩卖婴儿和出生证明)
+1. [古巴总理：中国和古巴是好兄弟](https://so.toutiao.com/search?keyword=古巴总理：中国和古巴是好兄弟)
+1. [俄成功试射布拉瓦洲际导弹什么水平](https://so.toutiao.com/search?keyword=俄成功试射布拉瓦洲际导弹什么水平)
+1. [女医生坠楼高位截瘫蹊跷溺亡](https://so.toutiao.com/search?keyword=女医生坠楼高位截瘫蹊跷溺亡)
+1. [华晨宇申请强制侵权黑粉道歉](https://so.toutiao.com/search?keyword=华晨宇申请强制侵权黑粉道歉)
+1. [八一飞行表演队将参加迪拜航空展](https://so.toutiao.com/search?keyword=八一飞行表演队将参加迪拜航空展)
+1. [美俄战略博弈进入新阶段？专家解读](https://so.toutiao.com/search?keyword=美俄战略博弈进入新阶段？专家解读)
+1. [2023 OPPO开发者大会前瞻](https://so.toutiao.com/search?keyword=2023+OPPO开发者大会前瞻)
+1. [主持人张泽群母亲去世](https://so.toutiao.com/search?keyword=主持人张泽群母亲去世)
+1. [哈尔滨冻成了“哈八滨”](https://so.toutiao.com/search?keyword=哈尔滨冻成了“哈八滨”)
+1. [刘诗诗宛如优雅黑天鹅](https://so.toutiao.com/search?keyword=刘诗诗宛如优雅黑天鹅)
+1. [理想MEGA配置曝光](https://so.toutiao.com/search?keyword=理想MEGA配置曝光)
+1. [巴以冲突后为何印度也躁动](https://so.toutiao.com/search?keyword=巴以冲突后为何印度也躁动)
+1. [崔康熙：上次赢了朋友球队不好意思](https://so.toutiao.com/search?keyword=崔康熙：上次赢了朋友球队不好意思)
+1. [乌高官：西方援乌武器没有流向加沙](https://so.toutiao.com/search?keyword=乌高官：西方援乌武器没有流向加沙)
+1. [“蓝委”：会尽最大努力促成蓝白合](https://so.toutiao.com/search?keyword=“蓝委”：会尽最大努力促成蓝白合)
+1. [《无价之宝》大小张译同框](https://so.toutiao.com/search?keyword=《无价之宝》大小张译同框)
+1. [出生证明事件暗访者：证据已交警方](https://so.toutiao.com/search?keyword=出生证明事件暗访者：证据已交警方)
+1. [追梦：库里是史上最佳控卫没有之一](https://so.toutiao.com/search?keyword=追梦：库里是史上最佳控卫没有之一)
+1. [澳洲联储时隔4次会议后鸽派加息](https://so.toutiao.com/search?keyword=澳洲联储时隔4次会议后鸽派加息)
+1. [“乌镇峰会” 十年回首再出发](https://so.toutiao.com/search?keyword=“乌镇峰会”+十年回首再出发)
+1. [美国和以色列讨论“战术性停火”](https://so.toutiao.com/search?keyword=美国和以色列讨论“战术性停火”)
+1. [中山二院辟谣乳腺外科团队学生患癌](https://so.toutiao.com/search?keyword=中山二院辟谣乳腺外科团队学生患癌)
+1. [福建男子在宾馆疑将妻子打死](https://so.toutiao.com/search?keyword=福建男子在宾馆疑将妻子打死)
+1. [古特雷斯谈巴以冲突：一场人性危机](https://so.toutiao.com/search?keyword=古特雷斯谈巴以冲突：一场人性危机)
 1. [美国将向以色列出售数千支M16步枪](https://so.toutiao.com/search?keyword=美国将向以色列出售数千支M16步枪)
 1. [贵州省政协原副主席李再勇被双开](https://so.toutiao.com/search?keyword=贵州省政协原副主席李再勇被双开)
 1. [OpenAI正式公布自定义GPT](https://so.toutiao.com/search?keyword=OpenAI正式公布自定义GPT)
 1. [抗议者堵住向以供应炸弹的美国工厂](https://so.toutiao.com/search?keyword=抗议者堵住向以供应炸弹的美国工厂)
-1. [布林肯试图拥抱土耳其外长遭拒绝](https://so.toutiao.com/search?keyword=布林肯试图拥抱土耳其外长遭拒绝)
-1. [主持人张泽群母亲去世](https://so.toutiao.com/search?keyword=主持人张泽群母亲去世)
 1. [五分钟速览OpenAI发布会](https://so.toutiao.com/search?keyword=五分钟速览OpenAI发布会)
 1. [公司回应不招河南人：领导个人喜好](https://so.toutiao.com/search?keyword=公司回应不招河南人：领导个人喜好)
 1. [金莎带00后小男友上节目秀恩爱](https://so.toutiao.com/search?keyword=金莎带00后小男友上节目秀恩爱)
-1. [女子称与植物人丈夫生试管婴儿二胎](https://so.toutiao.com/search?keyword=女子称与植物人丈夫生试管婴儿二胎)
-1. [巴以冲突后为何印度也躁动](https://so.toutiao.com/search?keyword=巴以冲突后为何印度也躁动)
 1. [美财长：美有办法同中国竞争又合作](https://so.toutiao.com/search?keyword=美财长：美有办法同中国竞争又合作)
 1. [俄乌冲突陷入僵局？专家解读](https://so.toutiao.com/search?keyword=俄乌冲突陷入僵局？专家解读)
 1. [白鹿王鹤棣芭莎大片](https://so.toutiao.com/search?keyword=白鹿王鹤棣芭莎大片)
-1. [八一飞行表演队将参加迪拜航空展](https://so.toutiao.com/search?keyword=八一飞行表演队将参加迪拜航空展)
 1. [媒体追问体育馆坍塌：天灾还是人祸](https://so.toutiao.com/search?keyword=媒体追问体育馆坍塌：天灾还是人祸)
 1. [各地降温图鉴](https://so.toutiao.com/search?keyword=各地降温图鉴)
 1. [OpenAI计划推出GPT Store](https://so.toutiao.com/search?keyword=OpenAI计划推出GPT+Store)
@@ -58,7 +80,6 @@
 1. [55岁作家自嘲：退休金1442元花不完](https://so.toutiao.com/search?keyword=55岁作家自嘲：退休金1442元花不完)
 1. [民政部官网在线领取工资补贴？假的](https://so.toutiao.com/search?keyword=民政部官网在线领取工资补贴？假的)
 1. [巴西父亲夺刀刺死威胁其孩子的摊贩](https://so.toutiao.com/search?keyword=巴西父亲夺刀刺死威胁其孩子的摊贩)
-1. [哈尔滨冻成了“哈八滨”](https://so.toutiao.com/search?keyword=哈尔滨冻成了“哈八滨”)
 1. [国内油价三连降加满一箱省5.5元](https://so.toutiao.com/search?keyword=国内油价三连降加满一箱省5.5元)
 1. [多家手机厂商取消5G开关设置](https://so.toutiao.com/search?keyword=多家手机厂商取消5G开关设置)
 1. [雄安12万农民进城记](https://so.toutiao.com/search?keyword=雄安12万农民进城记)
@@ -112,7 +133,6 @@
 1. [哈马斯的领导人们都去哪里了](https://so.toutiao.com/search?keyword=哈马斯的领导人们都去哪里了)
 1. [斯诺克国锦赛：丁俊晖胜伯恩斯](https://so.toutiao.com/search?keyword=斯诺克国锦赛：丁俊晖胜伯恩斯)
 1. [俄退出《欧洲常规武装力量条约》](https://so.toutiao.com/search?keyword=俄退出《欧洲常规武装力量条约》)
-1. [男扮女装照被曝光 美国一市长自杀](https://so.toutiao.com/search?keyword=男扮女装照被曝光+美国一市长自杀)
 1. [女子吐槽凌晨高铁停运在沈阳北站](https://so.toutiao.com/search?keyword=女子吐槽凌晨高铁停运在沈阳北站)
 1. [澳总理：贸易畅通无阻符合澳中利益](https://so.toutiao.com/search?keyword=澳总理：贸易畅通无阻符合澳中利益)
 1. [“乌镇时间”即将开启](https://so.toutiao.com/search?keyword=“乌镇时间”即将开启)
