--- a/archives/toutiao-search/2023-11-08.md
+++ b/archives/toutiao-search/2023-11-08.md
@@ -1,50 +1,74 @@
 # 2023-11-08
 
-共 119 条
+共 141 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Wed Nov 08 2023 10:15:32 GMT+0800 (China Standard Time) -->
-1. [厦门街头散落大量百元钞票](https://so.toutiao.com/search?keyword=厦门街头散落大量百元钞票)
-1. [董明珠首次回应孟羽童离职](https://so.toutiao.com/search?keyword=董明珠首次回应孟羽童离职)
+<!-- 最后更新时间 Wed Nov 08 2023 11:00:57 GMT+0800 (China Standard Time) -->
+1. [东北大学生正式确诊为“滑”妃](https://so.toutiao.com/search?keyword=东北大学生正式确诊为“滑”妃)
+1. [两男子盗价值4600余元胡蜂蜂巢被拘](https://so.toutiao.com/search?keyword=两男子盗价值4600余元胡蜂蜂巢被拘)
 1. [6年“全勤打卡”的进博老友](https://so.toutiao.com/search?keyword=6年“全勤打卡”的进博老友)
-1. [中纪委同日处分两只“老虎”](https://so.toutiao.com/search?keyword=中纪委同日处分两只“老虎”)
+1. [中山二院通报乳腺外科多人患癌](https://so.toutiao.com/search?keyword=中山二院通报乳腺外科多人患癌)
 1. [哈工大回应学生上课像登机](https://so.toutiao.com/search?keyword=哈工大回应学生上课像登机)
 1. [美国和以色列讨论“战术性停火”](https://so.toutiao.com/search?keyword=美国和以色列讨论“战术性停火”)
+1. [巴勒斯坦总统车队遇袭？知情人否认](https://so.toutiao.com/search?keyword=巴勒斯坦总统车队遇袭？知情人否认)
 1. [朱丹回应叫错人名结束职业生涯](https://so.toutiao.com/search?keyword=朱丹回应叫错人名结束职业生涯)
-1. [南方女生穿泳装在雪地里“游泳”](https://so.toutiao.com/search?keyword=南方女生穿泳装在雪地里“游泳”)
-1. [刘强东老家水龙头忘关 网友联系京东](https://so.toutiao.com/search?keyword=刘强东老家水龙头忘关+网友联系京东)
+1. [家长投诉学校后被查电话号码](https://so.toutiao.com/search?keyword=家长投诉学校后被查电话号码)
 1. [广东电网辟谣居民电价涨了](https://so.toutiao.com/search?keyword=广东电网辟谣居民电价涨了)
 1. [官方通报“医院院长贩卖出生证”](https://so.toutiao.com/search?keyword=官方通报“医院院长贩卖出生证”)
-1. [中山二院通报乳腺外科多人患癌](https://so.toutiao.com/search?keyword=中山二院通报乳腺外科多人患癌)
-1. [巴勒斯坦总统车队遇袭？知情人否认](https://so.toutiao.com/search?keyword=巴勒斯坦总统车队遇袭？知情人否认)
-1. [专家：全国房价泡沫终于挤完了](https://so.toutiao.com/search?keyword=专家：全国房价泡沫终于挤完了)
+1. [90后夫妻存100万靠利息生活](https://so.toutiao.com/search?keyword=90后夫妻存100万靠利息生活)
+1. [中纪委同日处分两只“老虎”](https://so.toutiao.com/search?keyword=中纪委同日处分两只“老虎”)
+1. [董明珠首次回应孟羽童离职](https://so.toutiao.com/search?keyword=董明珠首次回应孟羽童离职)
+1. [广西百色一学生亚硝酸盐中毒身亡](https://so.toutiao.com/search?keyword=广西百色一学生亚硝酸盐中毒身亡)
+1. [刘强东老家水龙头忘关 网友联系京东](https://so.toutiao.com/search?keyword=刘强东老家水龙头忘关+网友联系京东)
+1. [体育馆坍塌幸存男孩亲述逃生经历](https://so.toutiao.com/search?keyword=体育馆坍塌幸存男孩亲述逃生经历)
 1. [古巴总理：恨不得明天就开中古直航](https://so.toutiao.com/search?keyword=古巴总理：恨不得明天就开中古直航)
-1. [佳木斯坍塌体育馆投入使用仅3年](https://so.toutiao.com/search?keyword=佳木斯坍塌体育馆投入使用仅3年)
-1. [男子自学中医将自己治成精神异常](https://so.toutiao.com/search?keyword=男子自学中医将自己治成精神异常)
-1. [iQOO 12正式发布 3999元起售](https://so.toutiao.com/search?keyword=iQOO+12正式发布 3999元起售)
-1. [百度向华为订购1600片AI芯片](https://so.toutiao.com/search?keyword=百度向华为订购1600片AI芯片)
-1. [公司回应不招河南人：领导个人喜好](https://so.toutiao.com/search?keyword=公司回应不招河南人：领导个人喜好)
+1. [南方女生穿泳装在雪地里“游泳”](https://so.toutiao.com/search?keyword=南方女生穿泳装在雪地里“游泳”)
+1. [辽宁大雪一下二哈血脉开始觉醒](https://so.toutiao.com/search?keyword=辽宁大雪一下二哈血脉开始觉醒)
 1. [古特雷斯谈巴以冲突：一场人性危机](https://so.toutiao.com/search?keyword=古特雷斯谈巴以冲突：一场人性危机)
-1. [以军袭击加沙致死人数已过万](https://so.toutiao.com/search?keyword=以军袭击加沙致死人数已过万)
+1. [以军入侵加沙进入“危险新阶段”](https://so.toutiao.com/search?keyword=以军入侵加沙进入“危险新阶段”)
 1. [媒体：卖出生证院长曾获刑 咋上任的](https://so.toutiao.com/search?keyword=媒体：卖出生证院长曾获刑+咋上任的)
-1. [一火箭弹落入以色列居民区画面曝光](https://so.toutiao.com/search?keyword=一火箭弹落入以色列居民区画面曝光)
+1. [解晓东阎维文朱时茂聚餐喝12元饮料](https://so.toutiao.com/search?keyword=解晓东阎维文朱时茂聚餐喝12元饮料)
 1. [100名以医生联署支持以军轰炸医院](https://so.toutiao.com/search?keyword=100名以医生联署支持以军轰炸医院)
+1. [记者实探被举报贩卖出生证医院](https://so.toutiao.com/search?keyword=记者实探被举报贩卖出生证医院)
+1. [《宁安如梦》的运镜](https://so.toutiao.com/search?keyword=《宁安如梦》的运镜)
+1. [医生科普传染性单核细胞增多症](https://so.toutiao.com/search?keyword=医生科普传染性单核细胞增多症)
+1. [曝哈佛“Z名单”为权贵子女开后门](https://so.toutiao.com/search?keyword=曝哈佛“Z名单”为权贵子女开后门)
+1. [公司回应不招河南人：领导个人喜好](https://so.toutiao.com/search?keyword=公司回应不招河南人：领导个人喜好)
+1. [车窗玻璃被冻住车主大雪天开窗驾驶](https://so.toutiao.com/search?keyword=车窗玻璃被冻住车主大雪天开窗驾驶)
+1. [东北人在雪地里洗貂皮大衣](https://so.toutiao.com/search?keyword=东北人在雪地里洗貂皮大衣)
+1. [专家：实验致研究员集体患癌概率为0](https://so.toutiao.com/search?keyword=专家：实验致研究员集体患癌概率为0)
+1. [iQOO 12正式发布 3999元起售](https://so.toutiao.com/search?keyword=iQOO+12正式发布 3999元起售)
+1. [进博会上出现标语：中国强则白俄强](https://so.toutiao.com/search?keyword=进博会上出现标语：中国强则白俄强)
+1. [懂车帝夜间AEB专项测试榜单出炉](https://so.toutiao.com/search?keyword=懂车帝夜间AEB专项测试榜单出炉)
+1. [立冬里的传承与坚守](https://so.toutiao.com/search?keyword=立冬里的传承与坚守)
+1. [多家手机厂商取消5G开关设置](https://so.toutiao.com/search?keyword=多家手机厂商取消5G开关设置)
+1. [淄博烧烤从业者现在怎么样了](https://so.toutiao.com/search?keyword=淄博烧烤从业者现在怎么样了)
+1. [国内成品油价格调整](https://so.toutiao.com/search?keyword=国内成品油价格调整)
+1. [美国延续针对伊朗国家紧急状态一年](https://so.toutiao.com/search?keyword=美国延续针对伊朗国家紧急状态一年)
+1. [男子自学中医将自己治成精神异常](https://so.toutiao.com/search?keyword=男子自学中医将自己治成精神异常)
+1. [男子列车刷手机被俩女孩误会在偷拍](https://so.toutiao.com/search?keyword=男子列车刷手机被俩女孩误会在偷拍)
+1. [白宫：美总统不认为以军应占领加沙](https://so.toutiao.com/search?keyword=白宫：美总统不认为以军应占领加沙)
+1. [退役军人祖孙三代合影](https://so.toutiao.com/search?keyword=退役军人祖孙三代合影)
+1. [女孩坐18小时硬座跨千里给男友惊喜](https://so.toutiao.com/search?keyword=女孩坐18小时硬座跨千里给男友惊喜)
+1. [体育馆坍塌 哪些建筑最弱不禁雪](https://so.toutiao.com/search?keyword=体育馆坍塌+哪些建筑最弱不禁雪)
+1. [今年冬天会是最冷冬天吗](https://so.toutiao.com/search?keyword=今年冬天会是最冷冬天吗)
+1. [部分议员呼吁美履行对菲老兵的承诺](https://so.toutiao.com/search?keyword=部分议员呼吁美履行对菲老兵的承诺)
+1. [科尔：库里的防守被严重低估了](https://so.toutiao.com/search?keyword=科尔：库里的防守被严重低估了)
+1. [厦门街头散落大量百元钞票](https://so.toutiao.com/search?keyword=厦门街头散落大量百元钞票)
+1. [专家：全国房价泡沫终于挤完了](https://so.toutiao.com/search?keyword=专家：全国房价泡沫终于挤完了)
+1. [佳木斯坍塌体育馆投入使用仅3年](https://so.toutiao.com/search?keyword=佳木斯坍塌体育馆投入使用仅3年)
+1. [百度向华为订购1600片AI芯片](https://so.toutiao.com/search?keyword=百度向华为订购1600片AI芯片)
+1. [以军袭击加沙致死人数已过万](https://so.toutiao.com/search?keyword=以军袭击加沙致死人数已过万)
+1. [一火箭弹落入以色列居民区画面曝光](https://so.toutiao.com/search?keyword=一火箭弹落入以色列居民区画面曝光)
 1. [媒体谈美向以提供小型精确制导武器](https://so.toutiao.com/search?keyword=媒体谈美向以提供小型精确制导武器)
 1. [巴勒斯坦总理开会发言一度哽咽失声](https://so.toutiao.com/search?keyword=巴勒斯坦总理开会发言一度哽咽失声)
 1. [联合国：加沙地带没有安全的地方](https://so.toutiao.com/search?keyword=联合国：加沙地带没有安全的地方)
-1. [退役军人祖孙三代合影](https://so.toutiao.com/search?keyword=退役军人祖孙三代合影)
 1. [主持人张泽群母亲去世](https://so.toutiao.com/search?keyword=主持人张泽群母亲去世)
 1. [以称对加沙超1.4万个目标进行打击](https://so.toutiao.com/search?keyword=以称对加沙超1.4万个目标进行打击)
 1. [泽连斯基任期届满后将继续履职](https://so.toutiao.com/search?keyword=泽连斯基任期届满后将继续履职)
-1. [淄博烧烤从业者现在怎么样了](https://so.toutiao.com/search?keyword=淄博烧烤从业者现在怎么样了)
 1. [15万内热门SUV哪些有AEB](https://so.toutiao.com/search?keyword=15万内热门SUV哪些有AEB)
-1. [多家手机厂商取消5G开关设置](https://so.toutiao.com/search?keyword=多家手机厂商取消5G开关设置)
-1. [进博会上出现标语：中国强则白俄强](https://so.toutiao.com/search?keyword=进博会上出现标语：中国强则白俄强)
-1. [解晓东阎维文朱时茂聚餐喝12元饮料](https://so.toutiao.com/search?keyword=解晓东阎维文朱时茂聚餐喝12元饮料)
 1. [长沙知名餐厅疑跑路 消费者员工喊话](https://so.toutiao.com/search?keyword=长沙知名餐厅疑跑路+消费者员工喊话)
 1. [餐馆为因雪滞留司机免费送热饺子](https://so.toutiao.com/search?keyword=餐馆为因雪滞留司机免费送热饺子)
-1. [今年冬天会是最冷冬天吗](https://so.toutiao.com/search?keyword=今年冬天会是最冷冬天吗)
-1. [车窗玻璃被冻住车主大雪天开窗驾驶](https://so.toutiao.com/search?keyword=车窗玻璃被冻住车主大雪天开窗驾驶)
 1. [35岁女子在香港做泥瓦工月入10万](https://so.toutiao.com/search?keyword=35岁女子在香港做泥瓦工月入10万)
 1. [购房者房贷被办成消费贷 银行回应](https://so.toutiao.com/search?keyword=购房者房贷被办成消费贷+银行回应)
 1. [欧冠：曼城3-0伯尔尼年轻人四连胜](https://so.toutiao.com/search?keyword=欧冠：曼城3-0伯尔尼年轻人四连胜)
@@ -54,7 +78,6 @@
 1. [曼城在欧冠已经连续17场不败](https://so.toutiao.com/search?keyword=曼城在欧冠已经连续17场不败)
 1. [高铁遇暴雪停运7h全车被困无人埋怨](https://so.toutiao.com/search?keyword=高铁遇暴雪停运7h全车被困无人埋怨)
 1. [导师连说3遍“学生全患癌”是造谣](https://so.toutiao.com/search?keyword=导师连说3遍“学生全患癌”是造谣)
-1. [90后夫妻存100万靠利息生活](https://so.toutiao.com/search?keyword=90后夫妻存100万靠利息生活)
 1. [今日立冬](https://so.toutiao.com/search?keyword=今日立冬)
 1. [《无所畏惧》评论区真实到可怕](https://so.toutiao.com/search?keyword=《无所畏惧》评论区真实到可怕)
 1. [美国动用70架运输机向以色列送军火](https://so.toutiao.com/search?keyword=美国动用70架运输机向以色列送军火)
@@ -93,7 +116,6 @@
 1. [撒贝宁一家四口游迪士尼](https://so.toutiao.com/search?keyword=撒贝宁一家四口游迪士尼)
 1. [周鸿祎自称乌镇峰会气氛组担当](https://so.toutiao.com/search?keyword=周鸿祎自称乌镇峰会气氛组担当)
 1. [韩国多地兴起“光脚走路”热潮](https://so.toutiao.com/search?keyword=韩国多地兴起“光脚走路”热潮)
-1. [部分议员呼吁美履行对菲老兵的承诺](https://so.toutiao.com/search?keyword=部分议员呼吁美履行对菲老兵的承诺)
 1. [欧足联预测米兰vs巴黎首发](https://so.toutiao.com/search?keyword=欧足联预测米兰vs巴黎首发)
 1. [看《重案六组》学拐卖婴儿如何量刑](https://so.toutiao.com/search?keyword=看《重案六组》学拐卖婴儿如何量刑)
 1. [杨威晒照庆祝结婚15周年](https://so.toutiao.com/search?keyword=杨威晒照庆祝结婚15周年)
