--- a/archives/toutiao-search/2023-11-08.md
+++ b/archives/toutiao-search/2023-11-08.md
@@ -1,51 +1,74 @@
 # 2023-11-08
 
-共 141 条
+共 162 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Wed Nov 08 2023 11:00:57 GMT+0800 (China Standard Time) -->
-1. [东北大学生正式确诊为“滑”妃](https://so.toutiao.com/search?keyword=东北大学生正式确诊为“滑”妃)
-1. [两男子盗价值4600余元胡蜂蜂巢被拘](https://so.toutiao.com/search?keyword=两男子盗价值4600余元胡蜂蜂巢被拘)
-1. [6年“全勤打卡”的进博老友](https://so.toutiao.com/search?keyword=6年“全勤打卡”的进博老友)
-1. [中山二院通报乳腺外科多人患癌](https://so.toutiao.com/search?keyword=中山二院通报乳腺外科多人患癌)
+<!-- 最后更新时间 Wed Nov 08 2023 12:00:42 GMT+0800 (China Standard Time) -->
 1. [哈工大回应学生上课像登机](https://so.toutiao.com/search?keyword=哈工大回应学生上课像登机)
+1. [立冬吃饺子](https://so.toutiao.com/search?keyword=立冬吃饺子)
+1. [6年“全勤打卡”的进博老友](https://so.toutiao.com/search?keyword=6年“全勤打卡”的进博老友)
+1. [东北大学生正式确诊为“滑”妃](https://so.toutiao.com/search?keyword=东北大学生正式确诊为“滑”妃)
+1. [扬州一母亲捂死女儿后跳楼](https://so.toutiao.com/search?keyword=扬州一母亲捂死女儿后跳楼)
 1. [美国和以色列讨论“战术性停火”](https://so.toutiao.com/search?keyword=美国和以色列讨论“战术性停火”)
-1. [巴勒斯坦总统车队遇袭？知情人否认](https://so.toutiao.com/search?keyword=巴勒斯坦总统车队遇袭？知情人否认)
 1. [朱丹回应叫错人名结束职业生涯](https://so.toutiao.com/search?keyword=朱丹回应叫错人名结束职业生涯)
-1. [家长投诉学校后被查电话号码](https://so.toutiao.com/search?keyword=家长投诉学校后被查电话号码)
-1. [广东电网辟谣居民电价涨了](https://so.toutiao.com/search?keyword=广东电网辟谣居民电价涨了)
-1. [官方通报“医院院长贩卖出生证”](https://so.toutiao.com/search?keyword=官方通报“医院院长贩卖出生证”)
-1. [90后夫妻存100万靠利息生活](https://so.toutiao.com/search?keyword=90后夫妻存100万靠利息生活)
-1. [中纪委同日处分两只“老虎”](https://so.toutiao.com/search?keyword=中纪委同日处分两只“老虎”)
 1. [董明珠首次回应孟羽童离职](https://so.toutiao.com/search?keyword=董明珠首次回应孟羽童离职)
+1. [中纪委同日处分两只“老虎”](https://so.toutiao.com/search?keyword=中纪委同日处分两只“老虎”)
+1. [广东电网辟谣居民电价涨了](https://so.toutiao.com/search?keyword=广东电网辟谣居民电价涨了)
+1. [金莎男友为追她做了100多道菜](https://so.toutiao.com/search?keyword=金莎男友为追她做了100多道菜)
+1. [90后夫妻存100万靠利息生活](https://so.toutiao.com/search?keyword=90后夫妻存100万靠利息生活)
+1. [巴勒斯坦总统车队遇袭？知情人否认](https://so.toutiao.com/search?keyword=巴勒斯坦总统车队遇袭？知情人否认)
+1. [证监会主席回应注册制改革](https://so.toutiao.com/search?keyword=证监会主席回应注册制改革)
+1. [中山二院通报乳腺外科多人患癌](https://so.toutiao.com/search?keyword=中山二院通报乳腺外科多人患癌)
+1. [月光族在间谍指导下考上公务员](https://so.toutiao.com/search?keyword=月光族在间谍指导下考上公务员)
+1. [两男子盗价值4600余元胡蜂蜂巢被拘](https://so.toutiao.com/search?keyword=两男子盗价值4600余元胡蜂蜂巢被拘)
+1. [记者讲述巴以战场印象最深一幕](https://so.toutiao.com/search?keyword=记者讲述巴以战场印象最深一幕)
+1. [古巴总理：恨不得明天就开中古直航](https://so.toutiao.com/search?keyword=古巴总理：恨不得明天就开中古直航)
+1. [俄方分析泽连斯基拒绝战时选举动机](https://so.toutiao.com/search?keyword=俄方分析泽连斯基拒绝战时选举动机)
+1. [以军入侵加沙进入“危险新阶段”](https://so.toutiao.com/search?keyword=以军入侵加沙进入“危险新阶段”)
+1. [美议员喊话以色列：必须停止轰炸](https://so.toutiao.com/search?keyword=美议员喊话以色列：必须停止轰炸)
+1. [媒体：卖出生证院长曾获刑 咋上任的](https://so.toutiao.com/search?keyword=媒体：卖出生证院长曾获刑+咋上任的)
+1. [联合国一机构89名员工死于巴以冲突](https://so.toutiao.com/search?keyword=联合国一机构89名员工死于巴以冲突)
+1. [世卫：对加沙医院任何袭击不可接受](https://so.toutiao.com/search?keyword=世卫：对加沙医院任何袭击不可接受)
+1. [曝哈佛“Z名单”为权贵子女开后门](https://so.toutiao.com/search?keyword=曝哈佛“Z名单”为权贵子女开后门)
+1. [多家手机厂商取消5G开关设置](https://so.toutiao.com/search?keyword=多家手机厂商取消5G开关设置)
+1. [100名以医生联署支持以军轰炸医院](https://so.toutiao.com/search?keyword=100名以医生联署支持以军轰炸医院)
+1. [埃及红新月会向加沙提供新一批物资](https://so.toutiao.com/search?keyword=埃及红新月会向加沙提供新一批物资)
+1. [进博会上出现标语：中国强则白俄强](https://so.toutiao.com/search?keyword=进博会上出现标语：中国强则白俄强)
+1. [内地人均居住面积41.8平方米](https://so.toutiao.com/search?keyword=内地人均居住面积41.8平方米)
 1. [广西百色一学生亚硝酸盐中毒身亡](https://so.toutiao.com/search?keyword=广西百色一学生亚硝酸盐中毒身亡)
+1. [三轮车撞倒2名女生碾压身体后逃逸](https://so.toutiao.com/search?keyword=三轮车撞倒2名女生碾压身体后逃逸)
+1. [解晓东阎维文朱时茂聚餐喝12元饮料](https://so.toutiao.com/search?keyword=解晓东阎维文朱时茂聚餐喝12元饮料)
+1. [公司回应不招河南人：领导个人喜好](https://so.toutiao.com/search?keyword=公司回应不招河南人：领导个人喜好)
+1. [淄博烧烤从业者现在怎么样了](https://so.toutiao.com/search?keyword=淄博烧烤从业者现在怎么样了)
+1. [iQOO 12正式发布 3999元起售](https://so.toutiao.com/search?keyword=iQOO+12正式发布 3999元起售)
+1. [家长投诉学校后被查电话号码](https://so.toutiao.com/search?keyword=家长投诉学校后被查电话号码)
+1. [35岁女子在香港做泥瓦工月入10万](https://so.toutiao.com/search?keyword=35岁女子在香港做泥瓦工月入10万)
+1. [男子自学中医将自己治成精神异常](https://so.toutiao.com/search?keyword=男子自学中医将自己治成精神异常)
+1. [立冬护肤小妙招](https://so.toutiao.com/search?keyword=立冬护肤小妙招)
+1. [成都欢乐谷NPC唐僧扮演者走红](https://so.toutiao.com/search?keyword=成都欢乐谷NPC唐僧扮演者走红)
+1. [男子举报收郑州原副检察长短信威胁](https://so.toutiao.com/search?keyword=男子举报收郑州原副检察长短信威胁)
+1. [古巴感谢中国连续31年的无条件支持](https://so.toutiao.com/search?keyword=古巴感谢中国连续31年的无条件支持)
+1. [孩子被爷爷奶奶带后的惊人变化](https://so.toutiao.com/search?keyword=孩子被爷爷奶奶带后的惊人变化)
+1. [巴安全部门6成员在追捕行动中受伤](https://so.toutiao.com/search?keyword=巴安全部门6成员在追捕行动中受伤)
+1. [大雪后东北车主找车像拆盲盒](https://so.toutiao.com/search?keyword=大雪后东北车主找车像拆盲盒)
+1. [南方女生穿泳装在雪地里“游泳”](https://so.toutiao.com/search?keyword=南方女生穿泳装在雪地里“游泳”)
+1. [柯文哲回应“蓝白合”：请耐心等待](https://so.toutiao.com/search?keyword=柯文哲回应“蓝白合”：请耐心等待)
+1. [卡桑旅：以袭击阻碍被扣押人员释放](https://so.toutiao.com/search?keyword=卡桑旅：以袭击阻碍被扣押人员释放)
+1. [官方通报“医院院长贩卖出生证”](https://so.toutiao.com/search?keyword=官方通报“医院院长贩卖出生证”)
 1. [刘强东老家水龙头忘关 网友联系京东](https://so.toutiao.com/search?keyword=刘强东老家水龙头忘关+网友联系京东)
 1. [体育馆坍塌幸存男孩亲述逃生经历](https://so.toutiao.com/search?keyword=体育馆坍塌幸存男孩亲述逃生经历)
-1. [古巴总理：恨不得明天就开中古直航](https://so.toutiao.com/search?keyword=古巴总理：恨不得明天就开中古直航)
-1. [南方女生穿泳装在雪地里“游泳”](https://so.toutiao.com/search?keyword=南方女生穿泳装在雪地里“游泳”)
 1. [辽宁大雪一下二哈血脉开始觉醒](https://so.toutiao.com/search?keyword=辽宁大雪一下二哈血脉开始觉醒)
 1. [古特雷斯谈巴以冲突：一场人性危机](https://so.toutiao.com/search?keyword=古特雷斯谈巴以冲突：一场人性危机)
-1. [以军入侵加沙进入“危险新阶段”](https://so.toutiao.com/search?keyword=以军入侵加沙进入“危险新阶段”)
-1. [媒体：卖出生证院长曾获刑 咋上任的](https://so.toutiao.com/search?keyword=媒体：卖出生证院长曾获刑+咋上任的)
-1. [解晓东阎维文朱时茂聚餐喝12元饮料](https://so.toutiao.com/search?keyword=解晓东阎维文朱时茂聚餐喝12元饮料)
-1. [100名以医生联署支持以军轰炸医院](https://so.toutiao.com/search?keyword=100名以医生联署支持以军轰炸医院)
 1. [记者实探被举报贩卖出生证医院](https://so.toutiao.com/search?keyword=记者实探被举报贩卖出生证医院)
 1. [《宁安如梦》的运镜](https://so.toutiao.com/search?keyword=《宁安如梦》的运镜)
 1. [医生科普传染性单核细胞增多症](https://so.toutiao.com/search?keyword=医生科普传染性单核细胞增多症)
-1. [曝哈佛“Z名单”为权贵子女开后门](https://so.toutiao.com/search?keyword=曝哈佛“Z名单”为权贵子女开后门)
-1. [公司回应不招河南人：领导个人喜好](https://so.toutiao.com/search?keyword=公司回应不招河南人：领导个人喜好)
 1. [车窗玻璃被冻住车主大雪天开窗驾驶](https://so.toutiao.com/search?keyword=车窗玻璃被冻住车主大雪天开窗驾驶)
 1. [东北人在雪地里洗貂皮大衣](https://so.toutiao.com/search?keyword=东北人在雪地里洗貂皮大衣)
 1. [专家：实验致研究员集体患癌概率为0](https://so.toutiao.com/search?keyword=专家：实验致研究员集体患癌概率为0)
-1. [iQOO 12正式发布 3999元起售](https://so.toutiao.com/search?keyword=iQOO+12正式发布 3999元起售)
-1. [进博会上出现标语：中国强则白俄强](https://so.toutiao.com/search?keyword=进博会上出现标语：中国强则白俄强)
 1. [懂车帝夜间AEB专项测试榜单出炉](https://so.toutiao.com/search?keyword=懂车帝夜间AEB专项测试榜单出炉)
 1. [立冬里的传承与坚守](https://so.toutiao.com/search?keyword=立冬里的传承与坚守)
-1. [多家手机厂商取消5G开关设置](https://so.toutiao.com/search?keyword=多家手机厂商取消5G开关设置)
-1. [淄博烧烤从业者现在怎么样了](https://so.toutiao.com/search?keyword=淄博烧烤从业者现在怎么样了)
 1. [国内成品油价格调整](https://so.toutiao.com/search?keyword=国内成品油价格调整)
 1. [美国延续针对伊朗国家紧急状态一年](https://so.toutiao.com/search?keyword=美国延续针对伊朗国家紧急状态一年)
-1. [男子自学中医将自己治成精神异常](https://so.toutiao.com/search?keyword=男子自学中医将自己治成精神异常)
 1. [男子列车刷手机被俩女孩误会在偷拍](https://so.toutiao.com/search?keyword=男子列车刷手机被俩女孩误会在偷拍)
 1. [白宫：美总统不认为以军应占领加沙](https://so.toutiao.com/search?keyword=白宫：美总统不认为以军应占领加沙)
 1. [退役军人祖孙三代合影](https://so.toutiao.com/search?keyword=退役军人祖孙三代合影)
@@ -69,7 +92,6 @@
 1. [15万内热门SUV哪些有AEB](https://so.toutiao.com/search?keyword=15万内热门SUV哪些有AEB)
 1. [长沙知名餐厅疑跑路 消费者员工喊话](https://so.toutiao.com/search?keyword=长沙知名餐厅疑跑路+消费者员工喊话)
 1. [餐馆为因雪滞留司机免费送热饺子](https://so.toutiao.com/search?keyword=餐馆为因雪滞留司机免费送热饺子)
-1. [35岁女子在香港做泥瓦工月入10万](https://so.toutiao.com/search?keyword=35岁女子在香港做泥瓦工月入10万)
 1. [购房者房贷被办成消费贷 银行回应](https://so.toutiao.com/search?keyword=购房者房贷被办成消费贷+银行回应)
 1. [欧冠：曼城3-0伯尔尼年轻人四连胜](https://so.toutiao.com/search?keyword=欧冠：曼城3-0伯尔尼年轻人四连胜)
 1. [余承东、何小鹏撕到现在究竟为什么](https://so.toutiao.com/search?keyword=余承东、何小鹏撕到现在究竟为什么)
@@ -107,7 +129,6 @@
 1. [神十六航天员回地球看见的第一个人](https://so.toutiao.com/search?keyword=神十六航天员回地球看见的第一个人)
 1. [男扮女装照被曝光 美国一市长自杀](https://so.toutiao.com/search?keyword=男扮女装照被曝光+美国一市长自杀)
 1. [哈马斯的领导人们都去哪里了](https://so.toutiao.com/search?keyword=哈马斯的领导人们都去哪里了)
-1. [月光族在间谍指导下考上公务员](https://so.toutiao.com/search?keyword=月光族在间谍指导下考上公务员)
 1. [女医生坠楼高位截瘫蹊跷溺亡](https://so.toutiao.com/search?keyword=女医生坠楼高位截瘫蹊跷溺亡)
 1. [女医生遗书称被丈夫长期注射麻醉剂](https://so.toutiao.com/search?keyword=女医生遗书称被丈夫长期注射麻醉剂)
 1. [黑龙江体育馆坍塌致3人遇难](https://so.toutiao.com/search?keyword=黑龙江体育馆坍塌致3人遇难)
